titulospages y arreglo problemas de direccionamiento

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -273,7 +273,7 @@
 
             <div class="conteiner-carruselPrimary">
                 <div class="carrusel-titulo">
-                    <h3 class="h2-carrusel">¡No te pierdas nuestros últimos lanzamientos!</h3>
+                    <h3 class="h2-carrusel">Populares</h3>
                 </div>
                 <div class="carrusel-primary">
                     <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/CardAOE.png"
@@ -327,9 +327,8 @@
             </div>
             <div class="conteiner-carruselPrimary">
                 <div class="carrusel-titulo">
-                    <h3 class="h2-carrusel">¡No te pierdas nuestros últimos lanzamientos!</h3>
+                    <h3 class="h2-carrusel">Para jugar con amigos</h3>
                 </div>
-
                 <div class="carrusel-primary">
                     <div class="card-game cardPremium-game cardGame"> <img class="card-img-game" src="img/card/cr.jpg" alt="">
                     </div>
@@ -362,7 +361,7 @@
 
             <div class="conteiner-carruselPrimary">
                 <div class="carrusel-titulo">
-                    <h3 class="h2-carrusel">¡No te pierdas nuestros últimos lanzamientos!</h3>
+                    <h3 class="h2-carrusel">Clasicos del sitio</h3>
                 </div>
 
                 <div class="carrusel-primary">
