agregar al carrito listo

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -133,7 +133,7 @@
                         <input class="inputs" type="password" name="password" placeholder="Confirme su contraseña"
                             required>
                         <input class="inputs" required="" placeholder="Enter birth date" type="date">
-                        <button class="btn" type="submit" id="id-popover">Iniciar Sesión</button>
+                        <button class="btn" type="submit" id="id-popover"><a href="/html/indexLoged.html">Registrarse</a></button>
                     </form>
 
                     <div class="social-login">
@@ -144,7 +144,7 @@
                     </div>
                     <hr class="line">
 
-                    <button class="btn" popovertarget="id-popover-2">Registrarse</button>
+                    <button class="btn" popovertarget="id-popover-2">Iniciar Sesion</button>
                 </div>
             </div>
 
