arreglo ruta registrar

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -133,7 +133,7 @@
                         <input class="inputs" type="password" name="password" placeholder="Confirme su contraseña"
                             required>
                         <input class="inputs" required="" placeholder="Enter birth date" type="date">
-                        <button class="btn" type="submit" id="id-popover"><a href="/html/indexLoged.html">Registrarse</a></button>
+                        <button class="btn" type="submit" id="id-popover"><a href="https://matifleitas.github.io/Interfaces-Grupo33/TP2/EntregaFinal/html/indexLoged.html">Registrarse</a></button>
                     </form>
 
                     <div class="social-login">
