Repare botones y algo de alineacion de carrusel

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -91,7 +91,8 @@
                 <form class="form-singin" action="#" method="POST">
                     <input class="inputs" type="email" name="email" placeholder="Ingrese su correo" required>
                     <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña" required>
-                    <button class="btn" type="submit" popovertarget="id-popover"><a href="html/indexLoged.html">Iniciar Sesión</a></button>
+                    <button class="btn" type="submit" popovertarget="id-popover"><a href="html/indexLoged.html">Iniciar
+                            Sesión</a></button>
                 </form>
 
                 <div class="social-login">
@@ -133,7 +134,8 @@
                         <input class="inputs" type="password" name="password" placeholder="Confirme su contraseña"
                             required>
                         <input class="inputs" required="" placeholder="Enter birth date" type="date">
-                        <button class="btn" type="submit" id="id-popover"><a href="https://matifleitas.github.io/Interfaces-Grupo33/TP2/EntregaFinal/html/indexLoged.html">Registrarse</a></button>
+                        <button class="btn" type="submit" id="id-popover"><a
+                                href="https://matifleitas.github.io/Interfaces-Grupo33/TP2/EntregaFinal/html/indexLoged.html">Registrarse</a></button>
                     </form>
 
                     <div class="social-login">
@@ -233,17 +235,28 @@
             <div class="conteiner-carruselPrimary">
                 <div class="carrusel-titulo">
                     <h3 class="h2-carrusel">¡No te pierdas nuestros últimos lanzamientos!</h3>
+
+                    <div class="conteiner-btns">
+                        <div class="conteiner-btnDirection  left">
+                            <div class="btn-carrusel"> <img src="assets/angle-left.svg" alt=""> </div>
+                        </div>
+                        <div class="conteiner-btnDirection  right">
+                            <div class="btn-carrusel"> <img src="assets/angle-right.svg" alt=""></div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="carrusel-primary">
                     <div class="card-game cardGame"><a href="html/juego.html"> <img class="card-img-game"
                                 src="img/card/CardBatman.png" alt=""></a>
                     </div>
-                    <div class="card-game cardPremium-game cardGame"> <img class="card-img-game" src="img/card/darksouls.jpg" alt="">
+                    <div class="card-game cardPremium-game cardGame"> <img class="card-img-game"
+                            src="img/card/darksouls.jpg" alt="">
                     </div>
                     <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardMinecraft.png" alt="">
                     </div>
-                    <div class="card-game cardPremium-game cardGame"> <img class="card-img-game" src="img/card/manorlords.jpg" alt="">
+                    <div class="card-game cardPremium-game cardGame"> <img class="card-img-game"
+                            src="img/card/manorlords.jpg" alt="">
                     </div>
                     <div class="card-game cardGame"> <img class="card-img-game" src="img/card/napo.jpg" alt="">
                     </div>
@@ -273,7 +286,18 @@
 
             <div class="conteiner-carruselPrimary">
                 <div class="carrusel-titulo">
-                    <h3 class="h2-carrusel">Populares</h3>
+                    <div>
+                        <h3 class="h2-carrusel">Populares</h3>
+                    </div>
+
+                    <div class="conteiner-btns">
+                        <div class="conteiner-btnDirection  left">
+                            <div class="btn-carrusel"> <img src="assets/angle-left.svg" alt=""> </div>
+                        </div>
+                        <div class="conteiner-btnDirection  right">
+                            <div class="btn-carrusel"> <img src="assets/angle-right.svg" alt=""></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="carrusel-primary">
                     <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/CardAOE.png"
@@ -293,8 +317,8 @@
                                 alt="">
                         </div>
                     </div>
-                    <div class="card-game cardPremium-game cardGameSecundary"> <img class="card-img-game" src="img/card/CardShooker.png"
-                            alt=""></div>
+                    <div class="card-game cardPremium-game cardGameSecundary"> <img class="card-img-game"
+                            src="img/card/CardShooker.png" alt=""></div>
                     <div class="card-game cardGameSecundary">
                         <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/cardcs.png" alt="">
                         </div>
@@ -327,10 +351,21 @@
             </div>
             <div class="conteiner-carruselPrimary">
                 <div class="carrusel-titulo">
-                    <h3 class="h2-carrusel">Para jugar con amigos</h3>
+                    <div>
+                        <h3 class="h2-carrusel">Para jugar con amigos</h3>
+                    </div>
+                    <div class="conteiner-btns">
+                        <div class="conteiner-btnDirection  left">
+                            <div class="btn-carrusel"> <img src="assets/angle-left.svg" alt=""> </div>
+                        </div>
+                        <div class="conteiner-btnDirection  right">
+                            <div class="btn-carrusel"> <img src="assets/angle-right.svg" alt=""></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="carrusel-primary">
-                    <div class="card-game cardPremium-game cardGame"> <img class="card-img-game" src="img/card/cr.jpg" alt="">
+                    <div class="card-game cardPremium-game cardGame"> <img class="card-img-game" src="img/card/cr.jpg"
+                            alt="">
                     </div>
                     <div class="card-game cardGame"> <img class="card-img-game" src="img/card/sub.png" alt="">
                     </div>
@@ -361,7 +396,17 @@
 
             <div class="conteiner-carruselPrimary">
                 <div class="carrusel-titulo">
-                    <h3 class="h2-carrusel">Clasicos del sitio</h3>
+                    <div>
+                        <h3 class="h2-carrusel">Clasicos del sitio</h3>
+                    </div>
+                    <div class="conteiner-btns">
+                        <div class="conteiner-btnDirection  left">
+                            <div class="btn-carrusel"> <img src="assets/angle-left.svg" alt=""> </div>
+                        </div>
+                        <div class="conteiner-btnDirection  right">
+                            <div class="btn-carrusel"> <img src="assets/angle-right.svg" alt=""></div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="carrusel-primary">
@@ -383,14 +428,12 @@
                     <div class="card-game cardGameSecundary">
                         <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/street.png" alt="">
                         </div>
-                        <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/washer.jpg"
-                                alt="">
+                        <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/washer.jpg" alt="">
                         </div>
                         <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/diablov.jpg"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game d"><img class="card-img-game-small" src="img/card/nfl.jpg"
-                                alt="">
+                        <div class="cardSmall-game d"><img class="card-img-game-small" src="img/card/nfl.jpg" alt="">
                         </div>
                     </div>
                     <button class="btn-card-game-arrow  arrowRigth">
