--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cypher Gaming</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet"
@@ -250,8 +251,7 @@
                     <div class="card-game cardGame"><a href="html/juego.html"> <img class="card-img-game"
                                 src="img/card/CardBatman.png" alt=""></a>
                     </div>
-                    <div class="card-game cardPremium-game cardGame"> <img class="card-img-game"
-                            src="img/card/darksouls.jpg" alt="">
+                    <div class="card-game cardPremium-game cardGame"> <img class="card-img-game"src="img/card/darksouls.jpg" alt="">
                     </div>
                     <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardMinecraft.png" alt="">
                     </div>
@@ -266,20 +266,7 @@
                     </div>
                     <div class="card-game cardGame"> <img class="card-img-game" src="img/card/washer.jpg" alt="">
                     </div>
-                    <button class="btn-card-game-arrow  arrowRigth">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="62" height="45" viewBox="0 0 62 99" fill="none">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M53.4778 56.4328L24.25 79.7679L16.9443 73.9352L42.5193 53.5164L16.9443 33.0976L24.25 27.2649L53.4778 50.6C54.4464 51.3736 54.9906 52.4226 54.9906 53.5164C54.9906 54.6102 54.4464 55.6592 53.4778 56.4328Z"
-                                fill="#9852A4" />
-                        </svg></button>
-                    <button class="btn-card-game-arrow  arrowLeft">
-                        <svg class="card-game-arrowL" xmlns="http://www.w3.org/2000/svg" width="62" height="45"
-                            viewBox="0 0 62 99" fill="none">
-                            <path class="arrow" fill-rule="evenodd" clip-rule="evenodd"
-                                d="M53.4778 56.4328L24.25 79.7679L16.9443 73.9352L42.5193 53.5164L16.9443 33.0976L24.25 27.2649L53.4778 50.6C54.4464 51.3736 54.9906 52.4226 54.9906 53.5164C54.9906 54.6102 54.4464 55.6592 53.4778 56.4328Z"
-                                fill="#9852A4" />
-                        </svg>
-                    </button>
+
 
                 </div>
             </div>
@@ -333,20 +320,6 @@
                         </div>
 
                     </div>
-                    <button class="btn-card-game-arrow  arrowRigth">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="62" height="45" viewBox="0 0 62 99" fill="none">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M53.4778 56.4328L24.25 79.7679L16.9443 73.9352L42.5193 53.5164L16.9443 33.0976L24.25 27.2649L53.4778 50.6C54.4464 51.3736 54.9906 52.4226 54.9906 53.5164C54.9906 54.6102 54.4464 55.6592 53.4778 56.4328Z"
-                                fill="#9852A4" />
-                        </svg></button>
-                    <button class="btn-card-game-arrow  arrowLeft">
-                        <svg class="card-game-arrowL" xmlns="http://www.w3.org/2000/svg" width="62" height="45"
-                            viewBox="0 0 62 99" fill="none">
-                            <path class="arrow" fill-rule="evenodd" clip-rule="evenodd"
-                                d="M53.4778 56.4328L24.25 79.7679L16.9443 73.9352L42.5193 53.5164L16.9443 33.0976L24.25 27.2649L53.4778 50.6C54.4464 51.3736 54.9906 52.4226 54.9906 53.5164C54.9906 54.6102 54.4464 55.6592 53.4778 56.4328Z"
-                                fill="#9852A4" />
-                        </svg>
-                    </button>
                 </div>
             </div>
             <div class="conteiner-carruselPrimary">
