--- a/TP2/EntregaFinal/html/juego.html
+++ b/TP2/EntregaFinal/html/juego.html
@@ -153,7 +153,7 @@
                                     <span class="material-symbols-outlined icon">
                                         sports_esports
                                         </span>
-                                    <span class="text">JUGAR</span>
+                                    <span class="text-jugar">JUGAR</span>
                                   </button>
                             </div>
                         </div>
