agrego canva juego y transicion en boton jugar

--- a/TP2/EntregaFinal/html/juego.html
+++ b/TP2/EntregaFinal/html/juego.html
@@ -141,7 +141,7 @@
                     </div>
                 </div>
 
-                <div class="game-canva">
+                <div class="game-canva" id="gamePortada">
                     <div class="game-content">
                         <div class="photo-game">
                             <img class="game-photo" src="../assets/imgGame.png" alt="fotoJuego" />
@@ -149,7 +149,7 @@
                         <div class="elements-canva-game">
                             <div class="text-box">
                                 <h1>Batman vs Joker</h1>
-                                <button class="button-with-icon">
+                                <button class="button-with-icon" id="btnJugar">
                                     <span class="material-symbols-outlined icon">
                                         sports_esports
                                         </span>
@@ -157,6 +157,12 @@
                                   </button>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="cuatroEnLineaCanva taparJuego" id="canvaJuego">
+                    <span>batman vs joker</span>
+                    <div class="tablero">
+
                     </div>
                 </div>
                 <section class="info-game">
