dibujo tablero listo

--- a/TP3/EntregaFinal/html/juego.html
+++ b/TP3/EntregaFinal/html/juego.html
@@ -159,10 +159,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="cuatroEnLineaCanva taparJuego" id="canvaJuego">
-                    <span>batman vs joker</span>
+                <div class="taparJuego" id="fondoJuego">
                     <div class="tablero">
-                        
+                        <canvas id="canvaJuego" width="500" height="400"></canvas>
                     </div>
                 </div>
                 <section class="info-game">
