tablero se dibuja

--- a/TP3/EntregaFinal/html/juego.html
+++ b/TP3/EntregaFinal/html/juego.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="/img/logo/rounded_favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
@@ -160,8 +161,8 @@
                     </div>
                 </div>
                 <div class="cuatroEnLineaCanva taparJuego" id="canvaJuego">
-                    <span>batman vs joker</span>
-                    <div class="tablero">
+                    <canvas id="canvas"></canvas>
+                    <div class="tablero" id="canvasTablero">
                         
                     </div>
                 </div>
