--- a/TP3/EntregaFinal/html/juego.html
+++ b/TP3/EntregaFinal/html/juego.html
@@ -163,6 +163,9 @@
                 <div class="taparJuego" id="fondoJuego">
                     <div class="tablero">
                         <canvas id="canvaJuego" width="500" height="400"></canvas>
+                        <div class="contenedor_temp display-none">
+                            <span id="juego_temporizador"></span>
+                        </div>
                     </div>
                 </div>
                 <section class="info-game">
