--- a/TP3/EntregaFinal/html/juego.html
+++ b/TP3/EntregaFinal/html/juego.html
@@ -160,6 +160,27 @@
                         </div>
                     </div>
                 </div>
+               
+                <div class="cartel" hidden>
+                    <h2>Tipo de juego</h2>
+                    <form class="form_game">
+                        <label>
+                            <input type="radio" name="tipo" value="4"> 4 en línea
+                        </label><br>
+                        <label>
+                            <input type="radio" name="tipo" value="5"> 5 en línea
+                        </label><br>
+                        <label>
+                            <input type="radio" name="tipo" value="6"> 6 en línea
+                        </label><br><br>
+                        <button class="button-with-icon" id="btnJugar">
+                            <span class="material-symbols-outlined icon">
+                                sports_esports
+                                </span>
+                            <span class="text-jugar">JUGAR</span>
+                          </button>
+                    </form>
+                </div>
                 <div class="taparJuego" id="fondoJuego">
                     <div class="tablero">
                         <canvas id="canvaJuego" width="500" height="400"></canvas>
