--- a/TP3/EntregaFinal/html/juego.html
+++ b/TP3/EntregaFinal/html/juego.html
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                
-                <div class="cartel" hidden>
+                <div class="cartel" id="cartelForm">
                     <h2>Tipo de juego</h2>
                     <form class="form_game">
                         <label>
@@ -173,7 +173,7 @@
                         <label>
                             <input type="radio" name="tipo" value="6"> 6 en línea
                         </label><br><br>
-                        <button class="button-with-icon" id="btnJugar">
+                        <button class="button-with-icon" id="btnJugar2">
                             <span class="material-symbols-outlined icon">
                                 sports_esports
                                 </span>
@@ -181,8 +181,16 @@
                           </button>
                     </form>
                 </div>
-                <div class="contenedor_temp display-none">
-                    <span id="juego_temporizador"></span>
+                <div class="contenedor-turno display-none">
+                    <span id="nombre-jugar-turno"></span>
+                </div>
+                <div class="contenedor-temporizador display-none">
+                    <span id="juego-temporizador"></span>
+                </div>
+                <div class="contenedor-ganador display-none">
+                    <div class="cartel">
+                        <h3 id="h3-ganador"></h3>
+                    </div>
                 </div>
                 <div class="taparJuego" id="fondoJuego">
                     <div class="tablero">
