--- a/TP3/EntregaFinal/html/juego.html
+++ b/TP3/EntregaFinal/html/juego.html
@@ -193,7 +193,7 @@
                     </div>
                 </div>
                 <div class="taparJuego" id="fondoJuego">
-                    <canvas id="canvaJuego" width="1011" height="500"></canvas>
+                    <canvas id="canvaJuego" width="1011" height="500" class="canvasClass"></canvas>
                 </div>
                 <section class="info-game">
                     <div class="left">
