ajustes de la clase

--- a/TP3/EntregaFinal/html/juego.html
+++ b/TP3/EntregaFinal/html/juego.html
@@ -142,7 +142,7 @@
                     </div>
                 </div>
 
-                <div class="game-canva" id="gamePortada">
+                <div class="game-canva taparJuego" id="gamePortada">
                     <div class="game-content">
                         <div class="photo-game">
                             <img class="game-photo" src="../assets/imgGame.png" alt="fotoJuego" />
@@ -150,7 +150,7 @@
                         <div class="elements-canva-game">
                             <div class="text-box">
                                 <h1>Batman vs Joker</h1>
-                                <button class="button-with-icon" id="btnJugar">
+                                <button class="button-with-icon" id="changeScreen">
                                     <span class="material-symbols-outlined icon">
                                         sports_esports
                                         </span>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                
-                <div class="cartel taparJuego" id="formLineas">
+                <div class="cartel " id="formLineas">
                     <h2>Elija cantidad de lineas: </h2>
                     <form class="form_game">
                         <label>
@@ -173,7 +173,7 @@
                         <label>
                             <input type="radio" name="tipo" value="6"> 6 en línea
                         </label><br><br>
-                        <button type="submit" class="button-with-icon" id="btnJugar2">
+                        <button type="submit" class="button-with-icon" id="btnJugar">
                             <span class="material-symbols-outlined icon">
                                 sports_esports
                                 </span>
