--- a/TP3/EntregaFinal/html/juego.html
+++ b/TP3/EntregaFinal/html/juego.html
@@ -142,12 +142,12 @@
                     </div>
                 </div>
 
-                <div class="game-canva taparJuego" id="gamePortada">
+                <div class="game-canva" id="gamePortada">
                     <div class="game-content">
                         <div class="photo-game">
                             <img class="game-photo" src="../assets/imgGame.png" alt="fotoJuego" />
                         </div>
-                        <div class="elements-canva-game">
+                        <div class="elements-canva-game" id="elementsPortada">
                             <div class="text-box">
                                 <h1>Batman vs Joker</h1>
                                 <button class="button-with-icon" id="changeScreen">
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                
-                <div class="cartel " id="formLineas">
+                <div class="cartel taparJuego" id="formLineas">
                     <h2>Elija cantidad de lineas: </h2>
                     <form class="form_game">
                         <label>
@@ -181,18 +181,23 @@
                           </button>
                     </form>
                 </div>
-                <div class="contenedor-turno display-none">
-                    <span id="nombre-jugar-turno"></span>
-                </div>
-                <div class="contenedor-temporizador">
+                <div id="turn-indicator" class="turn-indicator taparJuego">Turno de: Equipo 1</div>
+                <div class="contenedor-temporizador taparJuego">
                     <span id="juego-temporizador"></span>
                 </div>
                 <div id="modal" class="modal taparJuego">
                     <div class="modal-content ">
-                        <span id="close-btn" class="close">holaa</span>
                         <h3 id="winner-message"></h3>
                         <button  id="play-again-btn">Jugar de nuevo</button>
                     </div>
+                </div>
+                <div class="cointainerBtnBack " id="btnResetGame">
+                    <button class="taparJuego" id="resetGame">
+                        <span class="material-symbols-outlined">
+                            replay
+                            </span>
+                            Reiniciar Juego
+                    </button>
                 </div>
                 <div class="taparJuego" id="fondoJuego">
                     <canvas id="canvaJuego" width="1011" height="500" class="canvasClass"></canvas>
