--- a/TP3/EntregaFinal/html/juego.html
+++ b/TP3/EntregaFinal/html/juego.html
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                
-                <div class="cartel taparJuego" id="formLineas">
+                <div class="cartel taparJuego" id="formLineas" style="margin-top: 0px;">
                     <h2>Elija cantidad de lineas: </h2>
                     <form class="form_game">
                         <label>
@@ -173,7 +173,7 @@
                         <label>
                             <input type="radio" name="tipo" value="6"> 6 en línea
                         </label><br>
-
+                        <h4 style="margin-top: 5px;">Elija ambos equipos:</h4>
                         <label for="equipo1">Equipo 1:</label>
                         <select id="equipo1" name="equipo1" class="select-pequeno">
                         <option disabled selected>Elige</option>
@@ -199,7 +199,7 @@
                             <span class="text-jugar">JUGAR</span>
                           </button>
                         <br>
-                          <span class="taparJuego" id="msjError" style="font-size: small;">No se puede jugar con fichas iguales</span>
+                          <span class="taparJuego" id="msjError" style="font-size: x-small;">No se puede jugar con fichas iguales</span>
                     </form>
                 </div>
                 <div id="turn-indicator" class="turn-indicator taparJuego">Turno de: Equipo 1</div>
