--- a/TP3/EntregaFinal/html/juego.html
+++ b/TP3/EntregaFinal/html/juego.html
@@ -202,7 +202,7 @@
                           <span class="taparJuego" id="msjError" style="font-size: x-small;">No se puede jugar con fichas iguales</span>
                     </form>
                 </div>
-                <div id="turn-indicator" class="turn-indicator taparJuego">Turno de: Equipo 1</div>
+                <div id="turn-indicator" class="turn-indicator taparJuego"></div>
                 <div class="contenedor-temporizador taparJuego">
                     <span id="juego-temporizador"></span>
                 </div>
