--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -19,11 +19,53 @@
         </div>
     </div>
     <div class="backgroundScrolling">
-        <div class="layerBackground layer_background1"></div>
-        <div class="layerBackground layer_background2"></div>
-        <div class="layerBackground layer_background3"></div>
-        <div class="layerBackground layer_background4"></div>
-        <div class="layerBackground layer_background5"></div>
+        <div class="layerBackground layer_background8">
+            <img src="assets/numberBlocksGrande.png" alt="">
+        </div>
+        <div class="layerBackground layer_background1">
+            <img src="assets/11.png" alt="">
+        </div>
+        <div class="layerBackground layer_background2">
+            <img src="assets/arbol3.png" alt="">
+        </div>
+        <div class="layerBackground layer_background3">
+            <img src="assets/22.png" alt="">
+        </div>
+        <div class="layerBackground layer_background4">
+            <img src="assets/Group 6.png" alt="">
+        </div>
+        <div class="layerBackground layer_background5">
+            <img src="assets/arbol1.png" alt="">
+        </div>
+        <div class="layerBackground layer_background6">
+            <img src="assets/arbol2.png" alt="">
+        </div>
+        <div class="layerBackground layer_background7">
+            <img src="assets/33.png" alt="">
+        </div>
+        <div class="layerBackground layer_background8">
+            <img src="assets/Vector.png" alt="">
+        </div>
+        <div class="layerBackground layer_background8">
+            <img src="assets/Vector (1).png" alt="">
+        </div>
+        <div class="layerBackground layer_background8">
+            <img src="assets/Vector (3).png" alt="">
+        </div>
+        <div class="layerBackground layer_background8">
+            <img src="assets/Vector (5).png" alt="">
+        </div>
+        <div class="layerBackground layer_background8">
+            <img src="assets/Vector (4).png" alt="">
+        </div>
+        <div class="layerBackground layer_background8">
+            <img src="assets/Vector (6).png" alt="">
+        </div>
+        <div class="layerBackground layer_background8">
+            <img src="assets/Vector (6).png" alt="">
+        </div>
+        
+
     </div>
 </body>
 </html>
