--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -1,71 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <title>Number Blocks</title>
 </head>
-<body>
-    <div class="header">
-        <div class="nav_hamburger">
-            <img src="assets/hamburger.png" alt="">
-        </div>
-        <div class="logo">
-            <img src="assets/numberBlocks.png" alt="">
-        </div>
-        <div class="button_buy">
-            <img src="assets/buttonBuy.png" alt="">
-        </div>
-    </div>
-    <div class="backgroundScrolling">
-        <div class="layerBackground layer_background8">
-            <img src="assets/numberBlocksGrande.png" alt="">
-        </div>
-        <div class="layerBackground layer_background1">
-            <img src="assets/11.png" alt="">
-        </div>
-        <div class="layerBackground layer_background2">
-            <img src="assets/arbol3.png" alt="">
-        </div>
-        <div class="layerBackground layer_background3">
-            <img src="assets/22.png" alt="">
-        </div>
-        <div class="layerBackground layer_background4">
-            <img src="assets/Group 6.png" alt="">
-        </div>
-        <div class="layerBackground layer_background5">
-            <img src="assets/arbol1.png" alt="">
-        </div>
-        <div class="layerBackground layer_background6">
-            <img src="assets/arbol2.png" alt="">
-        </div>
-        <div class="layerBackground layer_background7">
-            <img src="assets/33.png" alt="">
-        </div>
-        <div class="layerBackground layer_background8">
-            <img src="assets/Vector.png" alt="">
-        </div>
-        <div class="layerBackground layer_background8">
-            <img src="assets/Vector (1).png" alt="">
-        </div>
-        <div class="layerBackground layer_background8">
-            <img src="assets/Vector (3).png" alt="">
-        </div>
-        <div class="layerBackground layer_background8">
-            <img src="assets/Vector (5).png" alt="">
-        </div>
-        <div class="layerBackground layer_background8">
-            <img src="assets/Vector (4).png" alt="">
-        </div>
-        <div class="layerBackground layer_background8">
-            <img src="assets/Vector (6).png" alt="">
-        </div>
-        <div class="layerBackground layer_background8">
-            <img src="assets/Vector (6).png" alt="">
-        </div>
-        
 
+<body>
+    
+    <div class="backgroundScrolling">
+        <header>
+            <nav class="navBar">
+                <div class="nav_hamburger">
+                    <button><span></span><span></span><span></span></button>
+                </div>
+                <div class="logo"></div>
+                <div>
+                    <button class="btnBuy">COMPRAR</button>
+                </div>
+            </nav>
+        </header>
+        <section>
+            <div class="layerBackground arbol1"></div>
+            <div class="elem1"></div>
+            <div class="elem2"></div>
+            <div class="elem3"></div>
+            <div class="numberBlockPoster"></div>
+            <div class="arbol2"></div>
+            <div class="arbol3"></div>
+            <div class="roca1"></div>
+            <div class="arbusto1"></div>
+            <div class="arbusto2"></div>
+            <div class="roca2"></div>
+            <div class="roca3"></div>
+            <div class="roca4"></div>
+            <div class="arbusto3"></div>
+            <div class="arbusto4"></div>            
+        </section>
     </div>
 </body>
+
 </html>
