--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -15,7 +15,7 @@
 
 <body>
     
-    <div class="backgroundScrolling">
+    <div class="backgroundScrolling page1">
         <header>
             <nav class="navBar">
                 <div class="nav_hamburger">
@@ -43,6 +43,21 @@
             <div class="roca4"></div>
             <div class="arbusto3"></div>
             <div class="arbusto4"></div>            
+        </section>
+    </div>
+    <div class="backgroundScrolling page2">
+        <section class="section2">
+            <div class="texts">
+                <div class="box1">
+                    <h1 class="tittle">La app más divertida y educativa y para niños de 3 años</h1>
+                </div>
+                <div class="box2">
+                    <p class="description">Numberblocks World es una divertida aplicación de video a la carta y juegos por suscripción dirigida a niños a partir de 3 años, con un grupo de edad principal de 4 a 6 años, creada por el equipo de Alphablocks Ltd. y Blue Zoo Animations Studio, ganador de un premio BAFTA.</p>
+                </div>
+            </div>
+            <div class="elem5"></div>      
+            <div class="tv"></div>   
+            <div class="elem4"></div>       
         </section>
     </div>
 </body>
